--- a/saas/components/_btn-portfolio.scss
+++ b/saas/components/_btn-portfolio.scss
@@ -22,7 +22,8 @@
       box-shadow var(--timing-fn);
   }
 
-  &__modal-btn:hover {
+  &__modal-btn:hover,
+  &__modal-btn:focus {
     color: var(--second-color);
     background-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
