--- a/saas/components/_priority.scss
+++ b/saas/components/_priority.scss
@@ -26,7 +26,7 @@
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: var(--third-color);
+    color: var(--title-text-color);
   }
 }
 
