--- a/saas/components/_product.scss
+++ b/saas/components/_product.scss
@@ -16,7 +16,7 @@
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    color: var(--third-color);
+    color: var(--title-text-color);
   }
 
   &__img {
