--- a/saas/components/_doing.scss
+++ b/saas/components/_doing.scss
@@ -1,7 +1,8 @@
 .doing {
-  padding-bottom: 94px;
+  padding-top: 0px;
 
-  @media screen and (max-width: 1199px) {
+  @media screen and (max-width: 1200px) {
+    padding-top: 94px;
     display: none;
   }
 
