--- a/saas/components/_header.scss
+++ b/saas/components/_header.scss
@@ -11,8 +11,8 @@
   }
 
   &__container {
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     align-items: center;
   }
 }
@@ -29,7 +29,7 @@
 
   &--current {
     color: var(--accent-color);
-
+    
     &::after {
       content: "";
       position: absolute;
@@ -37,7 +37,7 @@
       width: 100%;
       height: 4px;
       background-color: var(--accent-color);
-      bottom: 0;
+      bottom: 10px;
       border-radius: 2px;
       left: 50%;
       transform: translate(-50%);
@@ -132,6 +132,7 @@
 
     &__list {
       margin-bottom: 60px;
+      padding: 0px 0px 0px 40px;
     }
   }
 
@@ -144,6 +145,7 @@
   .header-page__container {
     display: flex;
     align-items: center;
+    height: 60px;
   }
 
   .main-nav {
