--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -296,10 +296,16 @@ body {
   width: 100%;
   height: 4px;
   background-color: var(--accent-color);
-  bottom: 10px;
+  bottom: 9px;
   border-radius: 2px;
   left: 50%;
   transform: translate(-50%);
+}
+
+@media screen and (min-width: 320px) {
+  .main-nav__link--current::after {
+    content: none;
+  }
 }
 
 .main-nav__link .main-nav__link:hover,
