--- a/saas/components/_header.scss
+++ b/saas/components/_header.scss
@@ -37,10 +37,13 @@
       width: 100%;
       height: 4px;
       background-color: var(--accent-color);
-      bottom: 10px;
+      bottom: 9px;
       border-radius: 2px;
       left: 50%;
       transform: translate(-50%);
+      @media screen and (min-width: 320px) {
+       content: none;
+      }
     }
   }
 
